chore: update dependencies and improve JWT configuration
- Updated NestJS dependencies to latest versions for better performance and security.
- Enhanced JWT module configuration to handle expiration options more safely.
- Refactored AuthService to return consistent user object structure after profile updates.
- Improved error handling and logging in CloudinaryService for better debugging.
- Cleaned up unused comments and improved code readability across various services.
- Added a script to generate secure JWT secrets for configuration.
- Fixed import paths for better module resolution.
- Updated TypeScript configuration for improved type safety.

--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,34 @@ pids
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
 /generated/prisma
+
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# Dependencies
+node_modules/
+
+# Build outputs
+dist/
+build/
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+
+# Runtime data
+pids/
+*.pid
+*.seed
+*.pid.lock
+
+# Database
+*.sqlite
+*.sqlite3
+
+# Prisma
+prisma/migrations/
