--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "rxjs": "^7.8.2",
     "sharp": "^0.34.3",
     "streamifier": "^0.1.1",
+    "stripe": "^19.1.0",
     "uuid": "^11.1.0",
     "winston": "^3.17.0"
   },
